environment.Environment.scala.error
Compilation error:
Environment:1: error: not found: value brushdown
brushdown()
^Environment:6: error: not found: value brushup
brushup() 
^