environment.Environment.scala.code
brushdown()
right()
forward()
forward()
left()
brushup()